| Bug #39450 | embedded libmysqld with ndb does not drop table events | ||
|---|---|---|---|
| Submitted: | 15 Sep 2008 13:10 | Modified: | 15 Sep 2008 15:25 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | OS: | Any | |
| Assigned to: | Tomas Ulin | Target Version: | |
[15 Sep 2008 13:10]
Tomas Ulin
[15 Sep 2008 13:11]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/54080 2695 Tomas Ulin 2008-09-15 Bug #39450 embedded libmysqld with ndb does not drop table events
[15 Sep 2008 13:12]
Tomas Ulin
fixed in 6.3.18
[15 Sep 2008 15:25]
Jon Stephens
Documented in the 5.1.28-ndb-6.3.18 changelog as follows:
Embedded libmysqld with NDB did not drop table events.
