Bug #39450  embedded libmysqld with ndb does not drop table events